k8s_deployment/mailhog/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: hermes
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: secret-tls
  rules:
    - host: "mailhog.hermesapp.xyz"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
